--- a/src/index.njk
+++ b/src/index.njk
@@ -1,12 +1,12 @@
 ---
 layout: layouts/base.njk
-title: {{ title }}
-heroHeading: {{ heroHeading }}
-heroText: {{ heroText }}
-workHeading: {{ workHeading }}
-ctaHeading: {{ ctaHeading }}
-ctaText: {{ ctaText }}
-ctaButtonText: {{ ctaButtonText }}
+title: Home
+heroHeading: Amie Holstein
+heroText: Artistic Journey
+workHeading: Featured Projects
+eleventyNavigation:
+  key: Home
+  order: 1
 ---
 
 <div class="container">
@@ -59,8 +59,8 @@ ctaButtonText: {{ ctaButtonText }}
 
 <section class="cta">
     <div class="container">
-        <h2>{{ ctaHeading }}</h2>
-        <p>{{ ctaText }}</p>
-        <a href="/contact/" class="button">{{ ctaButtonText }}</a>
+        <h2>Interested in collaborating?</h2>
+        <p>I'm always open to new projects and opportunities to collaborate with other artists, galleries, and art enthusiasts.</p>
+        <a href="/contact/" class="button">Get in Touch</a>
     </div>
 </section>
