--- a/src/projects.njk
+++ b/src/projects.njk
@@ -6,8 +6,8 @@ permalink: /projects/
 
 <div class="container">
     <section class="hero">
-        <h1>Projects</h1>
-        <p>A collection of my artistic works and explorations</p>
+        <h1>{{ projects.heroHeading }}</h1>
+        <p>{{ projects.heroText }}</p>
     </section>
     
     <section class="featured-work">
