--- a/src/_includes/layouts/artwork.njk
+++ b/src/_includes/layouts/artwork.njk
@@ -1,6 +1,5 @@
 ---
 layout: layouts/base.njk
-permalink: /projects/{{ project.fileSlug }}/artwork/{{ artwork.order | slug }}/
 ---
 
 <div class="container">
@@ -30,7 +29,7 @@ permalink: /projects/{{ project.fileSlug }}/artwork/{{ artwork.order | slug }}/
         
         <div class="artwork-navigation">
             {% if prevArtwork %}
-            <a href="/projects/{{ project.fileSlug }}/artwork/{{ prevArtwork.order | slug }}/" class="nav-prev" title="{{ prevArtwork.title }}">
+            <a href="/projects/{{ project.fileSlug }}/artwork/{{ prevArtwork.order or loop.index0 - 1 }}/" class="nav-prev" title="{{ prevArtwork.title }}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg>
                 Previous
             </a>
@@ -41,7 +40,7 @@ permalink: /projects/{{ project.fileSlug }}/artwork/{{ artwork.order | slug }}/
             </a>
             
             {% if nextArtwork %}
-            <a href="/projects/{{ project.fileSlug }}/artwork/{{ nextArtwork.order | slug }}/" class="nav-next" title="{{ nextArtwork.title }}">
+            <a href="/projects/{{ project.fileSlug }}/artwork/{{ nextArtwork.order or loop.index0 + 1 }}/" class="nav-next" title="{{ nextArtwork.title }}">
                 Next
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline></svg>
             </a>
